--- a/Slovak/main/Backup.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Backup.apk/res/values-sk/strings.xml
@@ -291,7 +291,7 @@ Nemeňte alebo nepremenúvajte záložné súbory."</string>
     <string name="local_restore_select_activity">Spravovať zálohy</string>
     <string name="local_restore_select_data_activity">Obnoviť zo zálohy</string>
     <string name="local_restore_window_title">Lokálna obnova</string>
-    <string name="local_select_account_contact">Účty &amp; kontakty</string>
+    <string name="local_select_account_contact">Účty a kontakty</string>
     <string name="local_select_audio">Audio súbory</string>
     <string name="local_select_doc">Dokumenty</string>
     <string name="local_select_files">SD karta</string>
