--- a/Slovak/main/DeskClock.apk/res/values-sk/strings.xml
+++ b/Slovak/main/DeskClock.apk/res/values-sk/strings.xml
@@ -546,5 +546,9 @@
      <string name="sleep_date_provider_text_new">Údaje o spánku poskytuje Mi Fitness</string>
 <string name="sleep_record_desc_detailed_new">Sledovanie spánku poskytuje funkcia Mi Fitness Sleep. Ak túto funkciu zapnete, Mi Fitness bude automaticky zhromažďovať a zobrazovať údaje o vašom spánku na základe používania telefónu, aktivity a nastaveného času večierky a vstávania. Ak chcete presnejšie sledovať spánok, povoľte automatické spustenie Mi Fitness.</string>
      <string name="update_health_app_desc_new">Funkciu sledovania spánku poskytuje Mi Fitness. Aktualizujte Mi Fitness na najnovšiu verziu, aby ste získali prístup k súvisiacim funkciám.</string>
-     <string name="update_health_app_new">Aktualizujte Mi Fitness</string>      
+     <string name="update_health_app_new">Aktualizujte Mi Fitness</string>    
+<string name="read_phone_state">Prístup k informáciám o zariadení</string>
+     <string name="read_phone_state_desc">Prístup k stavu hovoru, keď zvoní budík</string>
+     <string name="read_phone_state_desc_when_request">Pre prístup k stavu hovoru na automatické pozastavenie budíkov pri prijímaní hovorov</string>
+     <string name="remark_hint">Zadajte názov</string>       
 </resources>
