--- a/Slovak/main/MiuiSystemUI.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiSystemUI.apk/res/values-sk/strings.xml
@@ -598,7 +598,7 @@ Vzorkovacia frekvencia"</string>
     <string name="controls_media_dismiss_button">Zavrieť</string>
     <string name="controls_media_resume">Obnoviť</string>
     <string name="controls_media_settings_button">Nastavenia</string>
-    <string name="controls_media_title">Média</string>
+    <string name="controls_media_title">Médiá</string>
     <string name="controls_menu_add">Pridať ovládacie prvky</string>
     <string name="controls_menu_edit">Upraviť ovládacie prvky</string>
     <string name="controls_pin_instructions">Zadajte PIN</string>
