--- a/Slovak/main/miuisystem.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/miuisystem.apk/res/values-sk-rSK/strings.xml
@@ -154,4 +154,9 @@ dd.MM"</string>
     <string name="yellow_page_sms_send_failed">Odosielanie SMS správy zlyhalo.</string>
     <string name="yellow_page_sms_sending">Odosielanie...</string>
     <string name="yellow_page_unable_send_sms">Nie je možné odoslať SMS správu.</string>
+    
+     <string name="group_name_contacts">Kontakty</string>
+     <string name="group_name_coworkers">Kolegovia</string>
+     <string name="group_name_family">Rodina</string>
+     <string name="group_name_friends">Priatelia</string>    
 </resources>
