--- a/Slovak/main/MiuiCamera.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiCamera.apk/res/values-sk/strings.xml
@@ -1444,7 +1444,7 @@ Objekt bude ostrý na rozmazanom pozadí."</string>
 <string name="pref_camera_track_eye_preferred_description">Sledovať pohyb očí, aby boli oči zaostrené, keď je v zábere jedna osoba</string>
      <string name="pref_camera_track_eye_preferred_title">Ostrenie na oči</string>    
      <string name="pref_hdr10_video_mode_description">Automatická optimalizácia farieb a kontrastu pre videá v rozlíšení 4K a 8K. Optimalizované videá je možné prehrávať iba na zariadeniach kompatibilných s HDR10.</string>
-     <string name="pref_camera_video_tag">Povliť označenie videí</string>
+     <string name="pref_camera_video_tag">Povoliť označenie videí</string>
          <string name="pref_camera_dynamic_frame_rate_title_new">Autom. snímková frekvencia</string>
     <string name="pref_camera_volumekey_function_entry_timer_new">Časovač (%ds)</string>
 </resources>
